@@ -2,6 +2,7 @@ package com.smart.vision.core.repository.impl;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
 import co.elastic.clients.elasticsearch._types.SortOrder;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.elasticsearch.core.search.HitsMetadata;
@@ -30,6 +31,8 @@ import static com.smart.vision.core.constant.CommonConstant.IMAGE_INDEX;
 import static com.smart.vision.core.constant.CommonConstant.MINIMUM_SIMILARITY;
 import static com.smart.vision.core.constant.CommonConstant.NUM_CANDIDATES_FACTOR;
 import static com.smart.vision.core.constant.CommonConstant.OCR_FIELD;
+import static com.smart.vision.core.constant.CommonConstant.SIMILAR_QUERIES_SIMILARITY;
+import static com.smart.vision.core.util.ScoreUtil.formatDisplayScore;
 
 /**
  * Hybrid search implementation
@@ -46,42 +49,43 @@ public class ImageRepositoryImpl implements ImageRepositoryCustom {
 
     @Override
     public List<ImageSearchResultDTO> hybridSearch(SearchQueryDTO query, List<Float> queryVector) {
+        SearchRequest.Builder requestBuilder = new SearchRequest.Builder()
+                .index(IMAGE_INDEX)
+                .size(query.getLimit());
+
+        if (query.getKeyword() != null && !query.getKeyword().isEmpty()) {
+            requestBuilder.query(q -> q
+                    .bool(b -> b
+                            .should(s -> s.match(m -> m.field(OCR_FIELD).query(query.getKeyword()).boost(DEFAULT_OCR_BOOST)))
+                            .should(s -> s.match(m -> m.field(FILE_NAME_FIELD).query(query.getKeyword()).boost(DEFAULT_FIELD_NAME_BOOST)))
+                    )
+            );
+        }
+
+        if (!CollectionUtils.isEmpty(queryVector)) {
+            requestBuilder.knn(k -> k
+                    .field(EMBEDDING_FIELD)
+                    .queryVector(queryVector)
+                    .k(query.getTopK())
+                    .numCandidates(Math.max(100, query.getTopK() * 2))
+                    .boost(DEFAULT_EMBEDDING_BOOST)
+                    .similarity(null == query.getSimilarity() ? MINIMUM_SIMILARITY : query.getSimilarity())
+
+            );
+        }
+
+        requestBuilder.sort(so -> so.score(sc -> sc.order(SortOrder.Desc)));
+        requestBuilder.sort(so -> so.field(f -> f.field("id").order(SortOrder.Asc)));
+
+        if (query.getSearchAfter() != null && !query.getSearchAfter().isEmpty()) {
+            requestBuilder.searchAfter(query.getSearchAfter());
+        }
+        SearchRequest request = requestBuilder.build();
         try {
-            SearchResponse<ImageDocument> response = esClient.search(s -> s
-                            .index(IMAGE_INDEX)
-                            .query(q -> q
-                                    .bool(b -> b
-                                            // 1. OCR text matching (BM25)
-                                            .should(builder -> builder
-                                                    .match(m -> m
-                                                            .field(OCR_FIELD)
-                                                            .query(query.getKeyword())
-                                                            .boost(DEFAULT_OCR_BOOST)
-                                                    ))
-                                            // 2. Filename/URL exact/tokenized matching
-                                            .should(builder -> builder
-                                                    .match(m -> m
-                                                            .field(FILE_NAME_FIELD)
-                                                            .query(query.getKeyword())
-                                                            .boost(DEFAULT_FIELD_NAME_BOOST)
-                                                    ))
-                                    )
-                            )
-                            // 3. Vector KNN search (HNSW index)
-                            .knn(builder -> builder
-                                    .field(EMBEDDING_FIELD)
-                                    .queryVector(queryVector)
-                                    .k(query.getTopK())
-                                    .numCandidates(Math.min(NUM_CANDIDATES_FACTOR * query.getTopK(), DEFAULT_NUM_CANDIDATES))
-                                    .boost(DEFAULT_EMBEDDING_BOOST)
-                                    .similarity(null == query.getSimilarity() ? MINIMUM_SIMILARITY : query.getSimilarity()))
-                            .sort(so -> so.score(sc -> sc.order(SortOrder.Desc)))
-                            .sort(so -> so.field(f -> f.field("id").order(SortOrder.Asc)))
-                            .searchAfter(query.getSearchAfter())
-                            .size(query.getLimit()),
-                    ImageDocument.class);
+//            log.info("Hybrid search request: {}", request);
+            SearchResponse<ImageDocument> response = esClient.search(request, ImageDocument.class);
             return convert2Doc(response);
-        } catch (IOException e) {
+        } catch (Exception e) {
             log.error("Hybrid search execution failed", e);
             return Collections.emptyList();
         }
@@ -95,16 +99,17 @@ public class ImageRepositoryImpl implements ImageRepositoryCustom {
 
         return hits.stream()
                 .filter(hit -> hit.source() != null)
+                .filter(hit -> hit.id() != null)
+                .filter(hit -> hit.score() != null)
                 .map(hit -> {
                     ImageDocument doc = hit.source();
-                    doc.setId(hit.id());
+                    doc.setId(Long.parseLong(hit.id()));
                     return ImageSearchResultDTO.builder()
                             .document(doc)
-                            .score(hit.score())
+                            .score(formatDisplayScore(hit.score()))
                             .sortValues(hit.sort())
                             .build();
                 }).collect(Collectors.toList());
-
     }
 
     @Override
@@ -112,21 +117,22 @@ public class ImageRepositoryImpl implements ImageRepositoryCustom {
         if (CollectionUtils.isEmpty(vector)) {
             return Collections.emptyList();
         }
+        SearchRequest.Builder requestBuilder = new SearchRequest.Builder()
+                .index(IMAGE_INDEX)
+                .size(topK);
+        requestBuilder.query(q -> q.bool(b -> b.mustNot(mn -> mn.term(t -> t.field("id").value(Long.parseLong(excludeDocId))))));
+        requestBuilder.knn(builder -> builder
+                .field(EMBEDDING_FIELD)
+                .queryVector(vector)
+                .filter(f -> f.bool(b -> b.mustNot(mn -> mn.term(t -> t.field("id").value(Long.parseLong(excludeDocId))))))
+                .k(topK)
+                .numCandidates(Math.min(NUM_CANDIDATES_FACTOR * topK, DEFAULT_NUM_CANDIDATES))
+                .similarity(SIMILAR_QUERIES_SIMILARITY));
+        requestBuilder.sort(so -> so.score(sc -> sc.order(SortOrder.Desc)));
+        requestBuilder.sort(so -> so.field(f -> f.field("id").order(SortOrder.Asc)));
+        SearchRequest request = requestBuilder.build();
         try {
-            SearchResponse<ImageDocument> response = esClient.search(s -> s
-                            .index(IMAGE_INDEX)
-                            .query(q -> q
-                                    .bool(b -> b.mustNot(mn -> mn.ids(i -> i.values(excludeDocId)))))
-                            .knn(builder -> builder
-                                    .field(EMBEDDING_FIELD)
-                                    .queryVector(vector)
-                                    .k(topK)
-                                    .numCandidates(Math.min(NUM_CANDIDATES_FACTOR * topK, DEFAULT_NUM_CANDIDATES))
-                                    .boost(DEFAULT_EMBEDDING_BOOST)
-                                    .similarity(MINIMUM_SIMILARITY))
-                            .size(topK),
-                    ImageDocument.class
-            );
+            SearchResponse<ImageDocument> response = esClient.search(request, ImageDocument.class);
             return convert2Doc(response);
         } catch (IOException e) {
             log.error("Execution of finding similar failed", e);
@@ -151,7 +157,7 @@ public class ImageRepositoryImpl implements ImageRepositoryCustom {
             );
 
             if (!response.hits().hits().isEmpty()) {
-                return response.hits().hits().get(0).source();
+                return response.hits().hits().getFirst().source();
             }
             return null;
         } catch (IOException e) {
